Closed
Bug 313015
Opened 20 years ago
Closed 20 years ago
With find dialog focussed, cmd-w closes tab instead of dialog when multiple tabs open
Categories
(Camino Graveyard :: General, defect, P2)
Tracking
(Not tracked)
VERIFIED
FIXED
Camino1.0
People
(Reporter: samuel.sidler+old, Assigned: sfraser_bugs)
Details
(Keywords: fixed1.8, regression)
Attachments
(1 file)
|
2.59 KB,
patch
|
Details | Diff | Splinter Review |
As the summary says, however, note that this works when there is only one tab
(or just a window with no tabs) open and properly closes the dialog instead of
the window.
STR:
1. Open two tabs
2. Press cmd-f to open the Find dialog
3. Make sure dialog has focus
4. Press cmd-w
Results:
The tab which was open closes.
Expected results:
The find dialog should close.
| Reporter | ||
Updated•20 years ago
|
Keywords: regression
Comment 1•20 years ago
|
||
Further comment: hitting ESC will close the Find window, but not the tab. I
discovered this by accident the other night. Until then, it had been driving me
nuts. Now it's just driving me mildly nuts, since I know a workaround. :)
cl
| Assignee | ||
Comment 3•20 years ago
|
||
Fix is to look at the key window, not the main window, when updating the Close
Window command.
| Assignee | ||
Updated•20 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 4•20 years ago
|
||
Fixed on trunk and branch.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Keywords: fixed1.8
Priority: -- → P2
Resolution: --- → FIXED
Target Milestone: --- → Camino1.0
Comment 5•20 years ago
|
||
This doesn't only happen with the Find dialog. I can get it to happen with the
bookmark "Get Info" window, too. The same workaround applies.
Haven't checked to see if Simon's fix solves this problem too, but I expect it will.
cl
| Assignee | ||
Comment 6•20 years ago
|
||
Yep, it does.
| Reporter | ||
Updated•18 years ago
|
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•