Fix bug 313015: when adjusting the Command-W close window command, look at the key window, rather than the main window. This allows Command-W to close the Find window, as it should.